--- a/202307/config/config_generate_texts_llama_jplaw_v01.yaml
+++ b/202307/config/config_generate_texts_llama_jplaw_v01.yaml
@@ -3,7 +3,7 @@ model:
   trust_remote_code: true
 
 generate:
-  max_new_tokens: 256
+  max_length: 2048
   temperature: 0.7
   top_p: 0.9
   repetition_penalty: 1.05
@@ -14,7 +14,7 @@ data:
 
 outputs:
   dirname: outputs
-  filename: generated_text01.jsonl
+  filename: generated_text02.jsonl
 
 prompt: |-
   日本の法律に基づき、以下の設問に答えてください
