--- a/202307/config/config_generate_texts_llama_jplaw_v03.yaml
+++ b/202307/config/config_generate_texts_llama_jplaw_v03.yaml
@@ -1,5 +1,5 @@
 model:
-  pretrained_model_name_or_path: "/groups/4/gcb50389/pretrained/LLaMA-HF"
+  pretrained_model_name_or_path: "/groups/4/gcb50389/pretrained/llama2-HF/Llama-2-7b-hf"
   device_map: auto
   trust_remote_code: true
 
@@ -11,21 +11,26 @@ generate:
   repetition_penalty: 1.05
 
 data:
-  test_file: data/R3_short_answer_exam_short.json
-  n_examples: 5
+  test_file1: data/R1_short_answer_exam_short.json
+  test_file2: data/R2_short_answer_exam_short.json
+  test_file3: data/R3_short_answer_exam_short.json
+  n_examples: 2
 
 outputs:
   dirname: outputs
-  filename: generated_text_${JOB_ID}.jsonl
+  filename: generated_text_03.jsonl
 
 prompt: |-
   日本の法律に基づき、設問に対する答えを回答してください。
 
-  設問：国又は地方公共団体との特殊な法律関係における人権に関する次のアからウまでの各記述について，ｂの見解がａの見解の根拠となっている場合には１を，そうでない場合には２を選びなさい。ア．ａ．当該法律関係の特殊性だけを理由とする基本的人権の制約は正当化できず，個々の法律関係ごとに，いかなる人権が，いかなる理由で，どの程度制限されるのかを具体的に検討すべきである。ｂ．特殊な法律関係といっても様々な関係があり，それらを特殊な法律関係として一律に捉え，同様の人権制約が妥当すると解するのは相当でない。イ．ａ．特別な法律関係にある者に対して公権力が包括的な支配権を有し，法律の根拠なく人権を制限することができ，それについて裁判所の審査が及ばないとする伝統的な特別権力関係論は，日本国憲法下では妥当し得ない。ｂ．日本国憲法は，国会を唯一の立法機関とし，徹底した法治主義の原則をとり，基本的人権の尊重を基本原則としている。ウ．ａ．刑事施設被収容者の収容関係について，人が国又は地方公共団体の通常の統治権に服することで成立する一般権力関係におけるのとは異なる人権制限を行う必要性は，現在もなお肯定できる。ｂ．刑事施設被収容者といえども人権の享有主体であることに変わりはなく，取り分け未決勾留中の者については，無罪推定原則が及んでいる。
-  答え：1-1-2
-
-  設問：制限行為能力者の行為であることを理由とする取消しに関する次のアからオまでの各記述のうち，誤っているものを組み合わせたものは，後記１から５までのうちどれか。ア．未成年者がした売買契約は，親権者の同意を得ないでした場合であっても，その契約が日常生活に関するものであるときは，取り消すことができない。イ．成年被後見人がした売買契約は，成年後見人の同意を得てした場合であっても，その契約が日常生活に関するものであるときを除き，取り消すことができる。ウ．被保佐人がした保証契約は，保佐人の同意を得てした場合には，取り消すことができない。エ．被補助人が，補助人の同意を得なければならない行為を，その同意又はこれに代わる家庭裁判所の許可を得ないでしたときは，その行為は取り消すことができる。オ．成年被後見人の行為であることを理由とする取消権の消滅時効の起算点は，成年被後見人が行為能力者となった時である。１．アイ ２．アオ ３．イウ ４．ウエ ５．エオ
+  設問：意思表示に関する次のアからオまでの各記述のうち，判例の趣旨に照らし正しいものを組み合わせたものは，後記１から５までのうちどれか。ア．土地の仮装譲受人が当該土地上に建物を建築してこれを他人に賃貸した場合，その建物賃借人は，民法第９４条第２項の「第三者」に当たらない。イ．強迫による意思表示の取消しが認められるためには，表意者が，畏怖の結果，完全に意思の自由を失ったことを要する。ウ．Ａを欺罔してその農地を買い受けたＢが，農地法上の許可を停止条件とする所有権移転の仮登記を得た上で，当該売買契約上の権利をＣに譲渡して当該仮登記移転の付記登記をした場合には，Ｃは民法第９６条第３項の「第三者」に当たる。エ．協議離婚に伴う財産分与契約において，分与者は，自己に譲渡所得税が課されることを知らず，課税されないとの理解を当然の前提とし，かつ，その旨を黙示的に表示していた場合であっても，財産分与契約について錯誤による無効を主張することはできない。オ．特定の意思表示が記載された内容証明郵便が受取人不在のために配達することができず，留置期間の経過により差出人に還付された場合，受取人がその内容を十分に推知することができ，受領も困難でなかったとしても，当該意思表示が受取人に到達したものと認められることはない。１．アイ ２．アウ ３．イオ ４．ウエ ５．エオ民法第９４条２前項の規定による意思表示の無効は，善意の第三者に対抗することができない。第９６条１，２３前二項の規定による詐欺による意思表示の取消しは，善意の第三者に対抗することができない。
   答え：2
+
+  設問：弁済に関する次のアからオまでの各記述のうち，判例の趣旨に照らし正しいものを組み合わせたものは，後記１から５までのうちどれか。ア．委託を受けない保証人は，主たる債務者の意思に反して弁済することができない。イ．弁済を受領する権限を有しない者に対する弁済は，債権者がこれによって利益を受けたとしても，債権者に対し効力を有しない。ウ．第三者は，当事者が合意により禁止したときは，弁済をすることができない。エ．弁済の時期について不確定期限があるときは，債務者は，その期限の到来した後に履行の請求を受けた時又はその期限の到来したことを知った時のいずれか早い時から遅滞の責任を負う。オ．預金通帳を盗んだ者が預金通帳を使用して現金自動入出機から預金の払戻しを受ける行為については，弁済の効力が生じることはない。１．アウ ２．アオ ３．イエ ４．イオ ５．ウエ
+  答え：5
+
+  設問：免除に関する次のアからオまでの各記述のうち，正しいものを組み合わせたものは，後記１から５までのうちどれか。ア．債権者が債務者に免除の意思を表示した場合，免除の効果は，債務者が債権者に対して免除の利益を享受する意思を表示した時に発生する。イ．債務の免除があった場合において，債務者が債務の免除を受けたことを忘れて弁済したときは，債務者はその返還を求めることはできない。ウ．Ａに対し，ＢＣＤが等しい負担部分で３００万円の連帯債務を負っている場合において，ＡがＣについて連帯の免除をしたときでも，Ｂ及びＤは，Ａに対し，３００万円の連帯債務を負う。エ．Ａに対し，ＢＣＤが等しい負担部分で３００万円の連帯債務を負っている場合において，ＡがＣに対して３００万円の連帯債務全額について免除をしたときでも，Ｂ及びＤは，Ａに対し，３００万円の連帯債務を負う。オ．主たる債務者について債務の免除があった場合には，連帯保証人の債務は消滅する。１．アイ ２．アエ ３．イウ ４．ウオ ５．エオ
+  答え：4
 
   設問: {question}
   答え: 
