--- a/202307/config/config_generate_texts_llama_jplaw_v07_1.yaml
+++ b/202307/config/config_generate_texts_llama_jplaw_v07_1.yaml
@@ -1,5 +1,6 @@
 model:
   pretrained_model_name_or_path: "/groups/4/gcb50389/pretrained/llama2-HF/Llama-2-7b-hf"
+  model_dir: "/home/acf15802az/abci-examples/checkpoint-100"
   device_map: auto
   trust_remote_code: true
 
@@ -14,7 +15,7 @@ data:
 
 outputs:
   dirname: outputs
-  filename: generated_text_06_1.jsonl
+  filename: generated_text_07_1.jsonl
 
 prompt: |-
   日本の法律に基づき、設問に対する答えを回答してください。
